--- a/src/components/Layout/index.less
+++ b/src/components/Layout/index.less
@@ -3,7 +3,7 @@
 
   > .app-container {
     overflow: auto;
-    height: calc(100vh - 60px);
+    // height: calc(100vh - 60px);
   }
 
   > .app-tab-bar {
